--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <li>It was rewarding to see the product through the process from an idea to a physical prototype</li>
                         </ul>
                         <p class="text-right">
-                            <a href="#projects" target="_blank"><button class="btn btn-medium btn-inverse">Back to Projects</button></a>
+                            <a href="#projects"><button class="btn btn-medium btn-inverse">Back to Projects</button></a>
                         </p>
                     </div>
                 </div>
@@ -324,7 +324,7 @@
                             <li>The design also features a connection scheme that gives the mat system modularity within a user's space.</li>
                         </ul>
                         <p class="text-right">
-                            <a href="#projects" target="_blank"><button class="btn btn-medium btn-inverse">Back to Projects</button></a>
+                            <a href="#projects"><button class="btn btn-medium btn-inverse">Back to Projects</button></a>
                         </p>
                     </div>
                 </div>
@@ -396,7 +396,7 @@
                             <li>The skills that I have learned over the course of these ten weeks will allow me to create websites again in the future.</li>
                         </ul>
                         <p class="text-right">
-                            <a href="#projects" target="_blank"><button class="btn btn-medium btn-inverse">Back to Projects</button></a>
+                            <a href="#projects"><button class="btn btn-medium btn-inverse">Back to Projects</button></a>
                         </p>
                     </div>
                 </div>
@@ -535,7 +535,7 @@
                     <div class="span6">
                         <p>I found these Cesca chairs on the side of the road with a sign that said, "Free." I couldn't help but pick them up and am now in the process of learning to sew so that I can recover the backs and bottoms.</p>
                         <p class="text-right">
-                            <a href="#interests" target="_blank"><button class="btn btn-medium btn-inverse">Back to Interests</button></a>
+                            <a href="#interests"><button class="btn btn-medium btn-inverse">Back to Interests</button></a>
                         </p>
                     </div>
                 </div>
@@ -566,7 +566,7 @@
                         <br>
                         <p>I have some of the parts I need from another electric guitar that I disassembled and am creating the engineering drawings I need to build this guitar. I have some ideas in the back of my head that I want to test before I finalize the design and finally build my dream guitar.</p>
                         <p class="text-right">
-                            <a href="#interests" target="_blank"><button class="btn btn-medium btn-inverse">Back to Interests</button></a>
+                            <a href="#interests"><button class="btn btn-medium btn-inverse">Back to Interests</button></a>
                         </p>
                     </div>
                 </div>
@@ -630,7 +630,7 @@
                         <br>
                         <p>My plain white wall was boring me, so I decided to spruce it up. Instead of buying an expensive wall mural, I blew up one of my engagement photos and printed it on a laser printer. Then I cut and hung the pieces up to form the mural.</p>
                         <p class="text-right">
-                            <a href="#interests" target="_blank"><button class="btn btn-medium btn-inverse">Back to Interests</button></a>
+                            <a href="#interests"><button class="btn btn-medium btn-inverse">Back to Interests</button></a>
                         </p>
                     </div>
                 </div>
