--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
             <div class="container">
                 <div class="jumbotron">
                     <h1 id="headingpadding">I am fueled by a desire to bring ideas to life.</h1>
-                    <p>This desire has led me to try to learn as many skills as possible to enable me to develop designs beyond ideas.</p>
+                    <p>This desire has led me to try to learn as many skills as possible to enable me to develop designs beyond merely ideas.</p>
                 </div>
                 <div class="row">
                     <div class="span7" id="picpadding">
                         <img src="img/brandonkwilliamspic.jpg">
                     </div>
                     <div class="span5">
-                        <p class="bigp">I am a senior in the Mechanical Engineering and Certificate of Engineering Design Programs at Northwestern University.</p>
+                        <p class="bigp">I am a senior in the Mechanical Engineering and Segal Design Certificate programs at Northwestern University.</p>
                         <br>
                         <br>
-                        <p class="bigp">Learning new skills is one of my favorite things because it allows me build the things that I want to bring to reality</p>
+                        <p class="bigp">Learning new skills is one of my favorite things because it allows me build the things that I want to bring to reality.</p>
                         <br>
                         <br>
                         <p class="bigp">Scroll down to learn more about me...</p>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="span4">
                         <h3>DSGN 370</h3>
-                        <p>I esigned and built this portfolio website from scratch using HTML and CSS on the Twitter Bootstrap framework.</p>
+                        <p>I designed and built this portfolio website from scratch using HTML5 and CSS3 on the <a href="http://github.twitter.com/bootstrap">Twitter Bootstrap</a> framework.</p>
                         <br>
                     </div>
                 </div>
@@ -216,22 +216,22 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="span6"><h3>Brainstorming/Research</h3></div>
+                    <div class="span6"><h3>Brainstorming &amp; Research</h3></div>
                     <div class="span6"><h3>Initial Design</h3></div>
                 </div>
                 <div class="row">
                     <div class="span6">
                         <ul class="page">
-                            <li>First, I researched existing products and client's provided images to determine taste and design ideas</li>
-                            <li>Then, I interviewed clients to determine wants and specifications</li>
-                            <li>I then created brainstorm sketches based on information received from clients</li>
+                            <li>First, I researched existing products and the client's provided images to determine their taste and design ideas.</li>
+                            <li>Then, I talked to the clients to determine their wants and specifications.</li>
+                            <li>I then created brainstorm sketches based on the information I received from the clients.</li>
                         </ul>
                     </div>
                     <div class="span6">
                         <ul class="page">
-                            <li>I used the sketches to create SolidWorks models of three design ideas</li>
-                            <li>I then Shared these models with the clients to receive feedback and determine design direction</li>
-                            <li>Next, I gathered design features from the client to be incorporated in the final design</li>
+                            <li>I used the sketches to create SolidWorks models of three design ideas.</li>
+                            <li>I then Shared these models with the clients to receive feedback and determine design direction.</li>
+                            <li>Next, I gathered design features from the client to be incorporated in the final design.</li>
                         </ul>
                     </div> 
                 </div>
@@ -254,8 +254,8 @@
                     </div>
                     <div class="span6">
                         <ul class="page">
-                            <li>K2 Plastics Inc. manufactured and assembled a final prototype using the pieces that had been designed</li>
-                            <li>It was rewarding to see the product through the process from an idea to a physical prototype</li>
+                            <li>K2 Plastics Inc. manufactured and assembled a final prototype using the pieces that had been designed.</li>
+                            <li>It was rewarding to see the product through the design process from an idea to a physical prototype.</li>
                         </ul>
                         <p class="text-right">
                             <a href="#projects"><button class="btn btn-medium btn-inverse">Back to Projects</button></a>
@@ -293,13 +293,13 @@
                     <div class="span6">
                         <ul class="page">
                             <li>We researched existing solutions and talked to an expert to gain knowledge in the field of microbiology.</li>
-                            <li>We conducted simple bacterial testing to try and understand the effectiveness of different green antimicrobials.</li>
+                            <li>We conducted simple bacterial testing to better understand the effectiveness of different green antimicrobials.</li>
                             <li>We also observed and interviewed users in their homes to better understand what their current habits are and look for opportunities.</li>
                         </ul>
                     </div>
                     <div class="span6">
                         <ul class="page">
-                             <li>Based on the user observations, we determined that the most critical requirements were that the mat be non-slip, thin, modular, easy to clean, and better at cleaning and drying shoes upon entry</li>
+                             <li>Based on the user observations, we determined that the most critical requirements were that the mat be non-slip, thin, modular, easy to clean, and better at cleaning and drying shoes upon entry.</li>
                         </ul>
                     </div> 
                 </div>
@@ -314,7 +314,7 @@
                 <div class="row">
                     <div class="span6">
                         <ul class="page">
-                           <li>I built this mockup from mop yarn and perforated plastic sheet by hooking loops of the mop yarn through the perforations.</li>
+                            <li>I built this mockup from mop yarn and perforated plastic sheet by hooking loops of the mop yarn through the perforations.</li>
                             <li>This mockup allowed us to test the absorbency of the mop yarn in comparison to other competitive samples.</li>
                         </ul>
                     </div>
@@ -359,13 +359,13 @@
                     <div class="span6">
                         <ul class="page">
                             <li>I researched different styles of web design by perusing several different inspiraion sites.</li>
-                            <li>This allowed me to be able to determine aspects of websites that I liked or didn't like and incorporate these ideas into my design.</li>
+                            <li>This allowed me to determine aspects of websites that I liked or disliked and incorporate those ideas into my design.</li>
                         </ul>
                     </div>
                     <div class="span6">
                         <ul class="page">
                             <li>I created several iterations of possible layouts in Pixelmator using different colors, fonts, and navigation styles.</li>
-                            <li>After receiving feedback from several sources, I was able to develop a final design approach.</li>
+                            <li>After receiving feedback from several reviewers, I was able to develop a final design direction.</li>
                         </ul>
                     </div> 
                 </div>
@@ -383,7 +383,7 @@
                 <div class="row">
                     <div class="span6">
                         <ul class="page">
-                            <li>After researching several development tools, I selected the Twitter Bootstrap Framework on which to build my site.
+                            <li>After researching several development tools, I selected the <a href="http://www.twitter.github.com/bootstrap">Twitter Bootstrap</a> framework on which to build my site.
                             </li>
                             <li>I had to read the documentation and experiment until I understood how the framework behaved.</li>
                             <li>Finally, I was able to start putting together the website you see now.</li>
@@ -392,7 +392,7 @@
                     <div class="span6">
                         <ul class="page">
                             <li>The final product is the website you are currently viewing.</li>
-                            <li>The website will continue to be updated and upgraded and has become a personal project to be carried on</li>
+                            <li>The website will continue to be updated and upgraded and has become a personal project to be carried on.</li>
                             <li>The skills that I have learned over the course of these ten weeks will allow me to create websites again in the future.</li>
                         </ul>
                         <p class="text-right">
@@ -445,7 +445,7 @@
                     </div>
                     <div class="span4">
                         <h3>Create for Fun</h3>
-                        <p>Drawing, painting, and tinkering are some of my favorite things to do in my spare time. Art projects allow me to learn new skills and have a great time doing it.</p>
+                        <p>Drawing, painting, and tinkering are some of my favorite things to do in my spare time. Art projects allow me to learn new skills and have a great time while doing so.</p>
                         <br>
                         <br>
                         <br>
@@ -506,10 +506,10 @@
                 </div>
                 <div class="row">
                     <div class="span6">
-                        <p>We purchased this dresser at a garage sale covered with latex paint. Underneath it, we found beautiful veneer which we refinished, repainting the areas that could not be saved.</p>
+                        <p>We purchased this dresser at a garage sale covered with paint. Underneath it, we found beautiful, walnut veneer which we refinished, repainting the areas that could not be salvaged.</p>
                     </div>
                     <div class="span6">
-                        <p>We purchased this dresser at an auction in rather rough shape. The beautiful figured wood on the front was begging to be restored, so we refinished it and were able to salvage the original wood knobs.</p>
+                        <p>This dresser was bought at an auction in rather rough shape. The beautiful figured wood on the front was begging to be restored, so we refinished it and were even able to save the original wood knobs.</p>
                     </div>
                 </div>
                 <hr>
@@ -530,7 +530,7 @@
                 </div>
                 <div class="row">
                     <div class="span6">
-                        <p>These dining chairs were purchased at an auction at a price of $20 for seven chairs. We had to fix a couple of rungs and repair a few seat bottoms, but overall, they turned out great.</p>
+                        <p>These dining chairs were purchased at an auction for $20 for seven chairs. We had to fix a couple of rungs and repair a few seat bottoms, but overall, they turned out great.</p>
                     </div>
                     <div class="span6">
                         <p>I found these Cesca chairs on the side of the road with a sign that said, "Free." I couldn't help but pick them up and am now in the process of learning to sew so that I can recover the backs and bottoms.</p>
@@ -606,7 +606,7 @@
                     </div>
                     <div class="span6">
                         <br>
-                        <p>I found an old wine rack in alley by a dumpster and disassembled it for the wood. Finding this awesome map of Chicago in an old atlas, I decided to combine them into this piece of wall art.</p>
+                        <p>I found an old wine rack in an alley by a dumpster and disassembled it for the wood. Finding this awesome map of Chicago in an old atlas, I decided to combine them into this piece of art.</p>
                     </div> 
                 </div>
                 <div class="row">
@@ -628,7 +628,7 @@
                     </div>
                     <div class="span6">
                         <br>
-                        <p>My plain white wall was boring me, so I decided to spruce it up. Instead of buying an expensive wall mural, I blew up one of my engagement photos and printed it on a laser printer. Then I cut and hung the pieces up to form the mural.</p>
+                        <p>My plain white wall was boring me, so I decided to spruce it up. Instead of buying an expensive wall mural, I blew up one of my engagement photos and printed it on a laser printer. Then I cut and hung the pieces up to form a mural.</p>
                         <p class="text-right">
                             <a href="#interests"><button class="btn btn-medium btn-inverse">Back to Interests</button></a>
                         </p>
@@ -651,7 +651,7 @@
                 <div class="span6">
                     <h1>Education</h1>
                     <h3>Northwestern University</h3>
-                    <p><strong>B.S. Mechanical Engineering &amp; Certificate in Engineering Design</strong></p>
+                    <p><strong>B.S. Mechanical Engineering &amp; Segal Design Certificate</strong></p>
                     <p><strong>Expected Graduation:</strong> June, 2013</p>
                     <p><strong>Cumulative GPA:</strong> 3.37/4.00</p>
                   
@@ -660,7 +660,7 @@
                     <p><strong>Non-Sequitur Solutions<br>
                     <em>DSGN 298/398 (Interdisciplinary Design Projects I and II)</em></strong></p>
                     <ul>
-                        <li>Worked on a small team to design an antimicrobial doormat product to bring to market.</li>
+                        <li>Worked on a small team with a startup to develop an antimicrobial doormat product to bring to market.</li>
                     </ul>
 
                     <h3>Fall Qtr. 2012/Winter Qtr. 2013</h3>
@@ -676,7 +676,7 @@
                     <h3>Spring/Summer 2012</h3>            
                     <p><strong>All-State Industries, Inc., Des Moines, IA<br><em>Lead Designer</em></strong></p>
                     <ul>
-                        <li>Led the design process from ideation to final prototyping of an acoustic guitar case.</li>
+                        <li>Led the design process from brainstorming to final prototyping of an acoustic guitar case.</li>
                         <li>Engineered several parts for prototyping via vacuum-forming, rapid-prototyping and CNC machining.</li>
                     </ul>
 
@@ -711,7 +711,7 @@
             <div class="container">
                 <div class="jumbotron">
                     <h1 id="headingpadding">I love what I do.</h1>
-                    <p>If you like anything that I've worked on or have any questions, feel free to email me or check out my Twitter, LinkedIn, or Facebook.</p>
+                    <p>If you like anything that I've worked on or have any questions, feel free to email me below.</p>
                 </div>
                 <div class="row">
                     <div class="span4 offset4" id="fortypx">
