--- a/indexnew.html
+++ b/indexnew.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Loading Bootstrap -->
-    <link href="css/bootstrapnew.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-docs.css" rel="stylesheet">
     <link href="css/prettify.css" rel="stylesheet">
 
@@ -53,7 +53,37 @@
 	<!-- Introduction -->
 	<section class="outer-full-page bg-image1">
         <div class="inner bg-white">
-            <h1>Sorry.<br>I'm currently redoing my website. Check back soon for an updated version!</h1>
+            <h1>Brandon Williams<br>is a Designer</h1>
+        </div>
+    </section>
+
+    <section class="outer-full-page bg-image2">
+        <div class="inner bg-white">
+            <h1>Brandon Williams<br>is an Engineer</h1>
+        </div>
+    </section>
+
+    <section class="outer-full-page bg-image3">
+        <div class="inner bg-white">
+            <h1>Brandon Williams<br>is a Builder</h1>
+        </div>
+    </section>
+
+    <section class="outer-third-height bg-image1">
+        <div class="inner bg-white-third">
+            <h1>Work Stuff</h1>
+        </div>
+    </section>
+
+    <section class="outer-third-height bg-image2" id="philosophy">
+        <div class="inner bg-white-third">
+            <h1>Work Stuff</h1>
+        </div>
+    </section>
+
+    <section class="outer-third-height bg-image3">
+        <div class="inner bg-white-third">
+            <h1>Work Stuff</h1>
         </div>
     </section>
 
