--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <![endif]-->
   </head>
 	<body>
-	
+	<a data-viewport="320x480" data-icon="mobile">Apple iPhone, iPod Touch</a><a data-viewport="320x568" data-icon="mobile" data-version="5">Apple iPhone 5</a><a data-viewport="360x640" data-icon="mobile">HTC One X</a><a data-viewport="720x1280" data-icon="mobile">LG Optimus 4X HD</a><a data-viewport="768x1280" data-icon="mobile">Nokia Lumia 920</a><a data-viewport="480×800" data-icon="mobile">Samsung Galaxy S</a><a data-viewport="600x1024" data-icon="tablet">Amazon Kindle Fire</a><a data-viewport="800x1280" data-icon="tablet">Amazon Kindle Fire HD</a><a data-viewport="768x1024" data-icon="tablet">Apple iPad (2-3rd, mini)</a><a data-viewport="400x683" data-icon="small-tablet">Samsung Galaxy Tab</a><a data-viewport="1280x800" data-icon="notebook">Widescreen</a><a data-viewport="2560x1600" data-icon="display" data-version="30″">30″ Apple Cinema Display</a><a data-viewport="1920×1080" data-icon="tv">HDTV 1080p</a>
 	<!-- Fixed Top Navigation -->
 	<a class="sr-only" href="#content">Skip to main content</a>
 	<header class="navbar navbar-default navbar-fixed-top bs-docs-nav" role="banner">
