--- a/indexnew.html
+++ b/indexnew.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Loading Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrapnew.css" rel="stylesheet">
     <link href="css/bootstrap-docs.css" rel="stylesheet">
     <link href="css/prettify.css" rel="stylesheet">
 
