--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
         <div class="inner bg-blue">
         </div>
     </div>
+    <div class="outer-full-page">
+        <div class="inner bg-white">
+        </div>
+    </div>
 
     <!-- Resume -->
 
