--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5">
-                        <h1>Brandon Williams: <span class="light">Engineer &amp; Designer</span></h1>
+                        <h1>Brandon Williams:<br><span class="light">Engineer &amp; Designer</span></h1>
                     </div>
                 </div>
                 <div class="row">
