--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                         <a href="#Philosophy">PHILOSOPHY</a>
                     </li>
                     <li>
+                        <a href="#Work">PROCESS</a>
+                    </li>
+                    <li>
                         <a href="#Work">WORK</a>
                     </li>
                     <li>
@@ -57,75 +60,152 @@
         <![endif]-->
 
     <!-- About -->
-    <div class="outer-full-page">
-        <div class="inner about-image">
+    <div class="outer-full-page bg-blue" id="#">
+        <div class="inner-full-page about-image middle">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-5">
-                        <h1>Brandon Williams:<br><span class="light">Engineer &amp; Designer</span></h1>
+                    <div class="col-md-5 font-white">
+                        <h1>Brandon Williams:<br><span class="font-light">Engineer &amp; Designer</span></h1>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4 text-center">
-                        <a href="#Philosophy"><span class="glyphicon glyphicon-circle-arrow-down"></span></a>
-                    </div>
-                </div>    
+                </div> 
             </div>
         </div>
     </div>
     
     <!-- Philosophy -->
-    <div class="outer-full-page bg-blue" id="Philosophy">
-        <div class="inner philosophy-image">
+    <div class="outer-fit bg-white" id="Philosophy">
+        <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-6 blue-text">
-                        <h1>Design for People:</h1>
-                        <h2>I believe that design is about more than how a product looks or works. It is the marriage between form and function.
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-5 col-md-offset-6 text-center">
-                        <a href="#Work"><span class="glyphicon glyphicon-circle-arrow-down blue-text"></span></a>
+                    <div class="col-md-6 col-md-offset-3 font-blue">
+                        <h1><span class="font-bold">Philosophy</span></h1>
+                         <div class="outer-line-top">  
+                        </div>  
+                            <div class="inner-line">
+                            </div>
+                        <div class="outer-line-bottom">  
+                        </div> 
+                        <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
                     </div>
                 </div>  
             </div>
         </div>
     </div>
 
+    <!-- Process -->
+    <div class="outer-fit bg-gray" id="Process">
+        <div class="inner-fit philosophy-image top center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3 font-blue">
+                        <h1><span class="font-bold">Process</span></h1>
+                        <div class="outer-line-top">  
+                        </div>  
+                            <div class="inner-line">
+                            </div>
+                        <div class="outer-line-bottom">  
+                        </div> 
+                        <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
+                    </div>
+                </div> 
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <h2>Problem</h2>
+                            <div class="outer-small-line-top">  
+                            </div>  
+                                <div class="inner-small-line">
+                                </div>
+                            <div class="outer-small-line-bottom">  
+                            </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <h2>Research</h2>
+                            <div class="outer-small-line-top">  
+                            </div>  
+                                <div class="inner-small-line">
+                                </div>
+                            <div class="outer-small-line-bottom">  
+                            </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <h2>Ideation</h2>
+                            <div class="outer-small-line-top">  
+                            </div>  
+                                <div class="inner-small-line">
+                                </div>
+                            <div class="outer-small-line-bottom">  
+                            </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <h2>Prototyping</h2>
+                            <div class="outer-small-line-top">  
+                            </div>  
+                                <div class="inner-small-line">
+                                </div>
+                            <div class="outer-small-line-bottom">  
+                            </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <h2>Iteration</h2>
+                            <div class="outer-small-line-top">  
+                            </div>  
+                                <div class="inner-small-line">
+                                </div>
+                            <div class="outer-small-line-bottom">  
+                            </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
+                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <h2>Manufacturing</h2>
+                            <div class="outer-small-line-top">  
+                            </div>  
+                                <div class="inner-small-line">
+                                </div>
+                            <div class="outer-small-line-bottom">  
+                            </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>   
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Work -->
-    <a style="display:block" href="http://google.com">
-        <div class="outer-third-page" id="Work">
-            <div class="inner-third chair-image">
-                <div class="container">
-                    <h1 class="text-left">Lounge Chair / School / 2013</h1>
-                </div>
-            </div> 
-        </div>
-    </a>
-    <a style="display:block" href="http://google.com">
-        <div class="outer-third-page">
-            <div class="inner-third shoe-image">
-                <div class="container">
-                    <h1 class="text-left">Dress Shoe / School / 2013</h1>
-                </div>
-            </div> 
-        </div>
-    </a>
-     <a style="display:block" href="http://google.com">
-        <div class="outer-third-page">
-            <div class="inner-third speaker-image">
-                <div class="container">
-                    <h1 class="text-left">Bluetooth Speaker / School / 2013</h1>
-                </div>
-            </div> 
-        </div>
-    </a>
 
     <!-- Resume -->
 
     <!-- Contact/Footer -->
-
+    <div class="outer-150">
+        <div class="inner-150">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center font-white">
+                        <h4>&copy Brandon Williams 2014</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h4>brandonwilliams.nu@gmail.com | 574-305-1468</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
         
 
 
