--- a/index.html
+++ b/index.html
@@ -247,12 +247,13 @@
         <script src="http://vjs.zencdn.net/4.1/video.js"></script>
         <script src="js/application.js"></script>
 
-        <script> 
-            $("#topnav").onePageNav({
-            currentClass: "active",
-            changeHash: true,
-            scrollSpeed: 1200,
-            });
+        <script>
+        $(window).resize(function(){
+        var windowHeight = $(window).height();
+        $('.outer-full-page').css({
+            'height':windowHeight
+        });
+        }).resize();
         </script>
     </body>
 </html>
